fixed spacing

--- a/src/pages/product-page/product-page.module.scss
+++ b/src/pages/product-page/product-page.module.scss
@@ -17,13 +17,8 @@
 }
 
 .right {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
     padding-top: 20px;
-    justify-content: start;
     flex: 1;
-    gap: 40px;
 }
 
 .productDetailsBtn {
@@ -34,6 +29,7 @@
 
 .productInfo {
     display: flex;
+    margin-top: 40px;
 }
 
 .productForm {
